# linuiz

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: post-commit-validation.yaml  pre-commit-validation.yaml
run/system/EFI/BOOT/: limine.conf
src/kernel/: Cargo.toml  build.rs
src/kernel/lds/: x86_64-unknown-none.lds
src/kernel/src/: acpi.rs  main.rs  params.rs  rand.rs  util.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/x86_64/: cpuid.rs  instructions.rs  mod.rs
src/kernel/src/arch/x86_64/devices/: mod.rs
src/kernel/src/arch/x86_64/devices/x2apic/: interrupt_command.rs  local_vector.rs  mod.rs
src/kernel/src/arch/x86_64/registers/: mod.rs  model_specific.rs  rflags.rs
src/kernel/src/arch/x86_64/registers/control/: cr0.rs  cr3.rs  cr4.rs
src/kernel/src/arch/x86_64/structures/: gdt.rs  mod.rs  tss.rs
src/kernel/src/arch/x86_64/structures/idt/: entry.rs  error_codes.rs  isf.rs  mod.rs  stubs.rs  stubs.s
src/kernel/src/cpu/: local_state.rs  mod.rs
src/kernel/src/drivers/ahci/hba/: fis.rs  mod.rs  port.rs
src/kernel/src/interrupts/: mod.rs  syscall.rs
src/kernel/src/interrupts/exceptions/: mod.rs  page_fault.rs
src/kernel/src/logging/: debug.rs  mod.rs  serial.rs
src/kernel/src/mem/: alloc.rs  hhdm.rs  mapper.rs  mod.rs  pmm.rs  stack.rs
src/kernel/src/mem/io/pci/device/: mod.rs
src/kernel/src/mem/paging/: mod.rs  walker.rs
src/kernel/src/panic/: mod.rs
src/kernel/src/panic/tracing/: mod.rs  symbols.rs
src/kernel/src/task/: address_space.rs  mod.rs  scheduling.rs
src/kernel/src/task/context/: x86_64.rs
src/kernel/src/time/: mod.rs  stopwatch.rs
src/kernel/src/time/local_timer/: x86_64.rs
src/kernel/src/time/system_clock/: mod.rs  x86_64.rs
xtask/src/: build.rs  main.rs  run.rs
