[package]
name = "kernel"
version = "0.0.0"
edition = "2024"

[features]
default = ["panic_traces"]
panic_traces = ["dep:rustc-demangle"]

[dependencies]
acpi = "5.2"
bit_field = "0.10"
bitflags = "2.9"
bitvec = { version = "1.0", default-features = false, features = ["atomic"] }
elf = { version = "0.8.0", default-features = false }
getrandom = "0.3"
heapless = "0.8"
ioports = "1.0"
limine = { version = "0.5", features = ["uuid"] }
log = { version = "0.4", default-features = false }
num_enum = { version = "0.7", default-features = false }
paste = "1.0"
printf-compat = { version = "0.2", default-features = false }
rand_pcg = { version = "0.9", default-features = false }
safe-mmio = "0.2"
spin = "0.10"
thiserror = { version = "2.0", default-features = false }
uart = { version = "3.0", default-features = false, features = [
    "address_impl",
] }
uuid = { version = "1.16", default-features = false, features = ["v4"] }
zerocopy = { version = "0.8", default-features = false, features = [
    "derive",
    "alloc",
] }

# source: git
acpica = { git = "https://github.com/linuiz-project/acpica" }
libsys = { git = "https://github.com/linuiz-project/libsys", tag = "v0.1.3" }

# feature-specific
rustc-demangle = { version = "0.1", optional = true } # feature: panic_traces

[target.x86_64-unknown-none.dependencies]
raw-cpuid = "11.0"
